[package]
name = "sign"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "*"
curv-kzen = "0.8"
openssl = "0.10"
openssl-sys = "0.9"
sha3 = "0.9.1"
hex = "0.4.3"
ecies = {version = "0.2", default-features = false, features = ["pure"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
base64 = "0.13.0"
